--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -166,6 +166,7 @@ spec:
         - name: files
           configMap:
             name: {{ include "app.fullname" $ }}-files
+            defaultMode: 0755
         {{- range $.Values.additionalVolumes }}
         - name: {{ .name }}
           {{- toYaml .volume | nindent 10 }}
