--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -110,6 +110,9 @@ spec:
             - name: files
               mountPath: /files
               readOnly: true
+            - name: binary-files
+              mountPath: /files
+              readOnly: true
             {{- range $.Values.additionalVolumes }}
             - name: {{ .name }}
               mountPath: {{ .mountPath }}
@@ -166,6 +169,10 @@ spec:
         - name: files
           configMap:
             name: {{ include "app.fullname" $ }}-files
+            defaultMode: 0755
+        - name: binary-files
+          configMap:
+            name: {{ include "app.fullname" $ }}-binary-files
             defaultMode: 0755
         {{- range $.Values.additionalVolumes }}
         - name: {{ .name }}
