image pull secrets

--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -34,9 +34,9 @@ spec:
       labels:
         {{- include "app.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
+      {{- range $name, $item := $.Values.imagePullSecrets }}
+        - {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
       {{- end }}
       serviceAccountName: {{ include "app.serviceAccountName" . }}
       {{- if .Values.securityContext }}
