--- a/charts/helmchart/templates/secret.yaml
+++ b/charts/helmchart/templates/secret.yaml
@@ -22,3 +22,13 @@ data:
     {{- $v  | b64enc | nindent 4 }} 
   {{- end }}
   {{- end }}
+{{- range $name, $item := $.Values.imagePullSecrets }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
+type: kubernetes.io/dockerconfigjson
+data:
+  .dockerconfigjson: {{ $item }}
+{{- end }}
