--- a/charts/helmchart/values.yaml
+++ b/charts/helmchart/values.yaml
@@ -34,6 +34,7 @@ secrets: {}
 secretFiles:  {} #Similar to .Values.files, but should be placed in the secrets.sops file
 
 imagePullSecrets: []
+  # docker: <b64 encoded docker config
 
 command: []
 args: []
