--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       imagePullSecrets:
       {{- range $name, $item := $.Values.imagePullSecrets }}
-        - {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
+        - name: {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
       {{- end }}
       serviceAccountName: {{ include "app.serviceAccountName" . }}
       {{- if .Values.securityContext }}
