--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -124,11 +124,13 @@ spec:
               subPath: {{ .subPath }}
               {{- end }}
             {{- end }}
-            {{- if $.Values.persistence.enabled }}
-            - name: storage
-              mountPath: {{ $.Values.persistence.mountPath }}
+            {{- range $item := $.Values.persistence }}
+            {{- if $item.enabled }}
+            - name: storage-{{ $item.name }}
+              mountPath: {{ $item.mountPath }}
               readOnly: false
             {{- end }}
+            {{- end }} #End range 
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           envFrom:
@@ -185,8 +187,12 @@ spec:
         - name: {{ .name }}
           {{- toYaml .volume | nindent 10 }}
         {{- end }}
-        {{- if .Values.persistence.enabled }}
-        - name: storage
+
+        ### PVC
+        {{- range $item := $.Values.persistence }}
+        {{- if $item.enabled }}
+        - name: storage-{{ $item.name }}
           persistentVolumeClaim:
-            claimName:  {{ include "app.fullname" . }}
-        {{- end }}
+            claimName:  {{ include "app.fullname" . }}-{{ $item.name }}
+        {{- end }} #End if
+        {{- end }} #End range 
