--- a/charts/helmchart/templates/pvc.yaml
+++ b/charts/helmchart/templates/pvc.yaml
@@ -1,17 +1,21 @@
-{{- if .Values.persistence.enabled }}
+{{- range $item := $.Values.persistence }}
+
+{{- if $item.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name:  {{ include "app.fullname" . }}
+  name:  {{ include "app.fullname" . }}-{{ $item.name }}
   labels:
     {{- include "app.labels" . | nindent 4 }}
 spec:
-  {{- if .Values.persistence.storageClass }}
-  storageClassName: {{ .Values.persistence.storageClass | quote }}
+  {{- if $item.storageClass }}
+  storageClassName: {{ $item.storageClass | quote }}
   {{- end }}
   accessModes:
-    - {{ .Values.persistence.accessMode | quote }}
+    - {{ $item.accessMode | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.size | quote }}
+      storage: {{ $item.size | quote }}
+
+{{- end }}
 {{- end }}
