--- a/charts/kuma/Chart.yaml
+++ b/charts/kuma/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 description: A Helm chart for Kuma Resources
-name: kume-resources
+name: kuma-resources
 type: application
 version: 0.2.0
 
