--- a/charts/helmchart/values.yaml
+++ b/charts/helmchart/values.yaml
@@ -133,11 +133,11 @@ rules: #Promtheus rules
     #     team: platform
 
 persistence:
-  - name: storage
-    enabled: true
-    accessMode: ReadWriteOnce
-    size: 1Gi
-    mountPath: "/storage"
+  # - name: storage
+  #   enabled: true
+  #   accessMode: ReadWriteOnce
+  #   size: 1Gi
+  #   mountPath: "/storage"
 
 ingress: {}
   # public:
