--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -57,7 +57,7 @@ spec:
       {{- end }}
 
       {{- range $.Values.initContainers }}
-        - {{ . }}
+        - {{ toYaml . | nindent 10 | trim }}
       {{- end }}
 
       {{- end }}
