--- a/charts/helmchart/values.yaml
+++ b/charts/helmchart/values.yaml
@@ -316,13 +316,13 @@ additionalVolumes: []
   #     secret:
   #       secretName: certs-ca-tls
 
-initContainers:
-  - name: chown
-    image: busybox
-    command: ["sh", "-c", "chown -R 2000:2000 /srv/sftpgo"]
-    volumeMounts:
-    - name: storage
-      mountPath: /srv/sftpgo
+initContainers: []
+  # - name: chown
+  #   image: busybox
+  #   command: ["sh", "-c", "chown -R 2000:2000 /srv/sftpgo"]
+  #   volumeMounts:
+  #   - name: storage
+  #     mountPath: /srv/sftpgo
 
 initContainersFromTemplate: []
   # - template: cloud-sql-proxy
