--- a/charts/godaddy-webhook/values.yaml
+++ b/charts/godaddy-webhook/values.yaml
@@ -12,7 +12,7 @@ image:
 pod:
   securePort:
 
-groupName: acme.calcguard.com
+groupName: acme.calcguard.net
 
 certManager:
   namespace: cert-manager
