--- a/charts/helmchart/values.yaml
+++ b/charts/helmchart/values.yaml
@@ -12,6 +12,13 @@ image:
 
 config: {}
 
+env: {}
+  # externalSecret:
+  #   - name: POSTGRES_PASSWORD
+  #     secretName: postgres-credentails
+  #     secretKey: password
+
+
 files: {}
   # script.sh: |
   #   #! /bin/bash
