--- a/charts/helmchart/templates/job.yml
+++ b/charts/helmchart/templates/job.yml
@@ -84,6 +84,13 @@ spec:
           {{- if $job.env }}
             {{- toYaml $job.env | nindent 12 }}
           {{- end }}
+          {{- range $item := $.Values.env.externalSecret }}
+            - name: {{ $item.name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $item.secretName }}
+                  key: {{ $item.secretKey }}
+          {{- end }}
       {{- if or ($job.sideCars) ($job.sideCarsFromTemplate) }}
       ####################
       #
