--- a/charts/helmchart/values.yaml
+++ b/charts/helmchart/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
+# jobOnly: true
 image:
   repository: quay.io/image
   pullPolicy: IfNotPresent
