--- a/charts/helmchart/templates/job.yml
+++ b/charts/helmchart/templates/job.yml
@@ -28,6 +28,10 @@ spec:
       labels:
         {{- include "app.selectorLabels" $ | nindent 8 }}
     spec:
+      imagePullSecrets:
+      {{- range $name, $item := $.Values.imagePullSecrets }}
+        - name: {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
+      {{- end }}
       restartPolicy: {{ $job.restartPolicy }}
       serviceAccountName: {{ include "app.serviceAccountName" $ }}
       {{- with $.Values.nodeSelector }}
