--- a/charts/helmchart/templates/cronjob.yml
+++ b/charts/helmchart/templates/cronjob.yml
@@ -33,6 +33,7 @@ spec:
           labels:
             {{- include "app.selectorLabels" $ | nindent 12 }}
         spec:
+          imagePullPolicy: {{ $job.image.pullPolicy }}
           imagePullSecrets:
           {{- range $name, $item := $.Values.imagePullSecrets }}
             - name: {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
