--- a/charts/helmchart/templates/job.yml
+++ b/charts/helmchart/templates/job.yml
@@ -28,6 +28,7 @@ spec:
       labels:
         {{- include "app.selectorLabels" $ | nindent 8 }}
     spec:
+      imagePullPolicy: {{ $job.image.pullPolicy }}
       imagePullSecrets:
       {{- range $name, $item := $.Values.imagePullSecrets }}
         - name: {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
