--- a/charts/helmchart/templates/job.yml
+++ b/charts/helmchart/templates/job.yml
@@ -69,6 +69,15 @@ spec:
             - secretRef:
                 name: {{ include "app.fullname" $ }}
           volumeMounts:
+            - name: files
+              mountPath: {{ .Values.filesMountPath | default "/files" }}
+              readOnly: true
+            - name: secret-files
+              mountPath: {{ .Values.secretFilesMountPath | default "/secrets" }}
+              readOnly: true
+            - name: binary-files
+              mountPath: {{ .Values.binaryFilesMountPath | default "/files/binary" }}
+              readOnly: true
             {{- range $job.additionalVolumes }}
             - name: {{ .name }}
               mountPath: {{ .mountPath }}
@@ -124,6 +133,18 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
+        - name: files
+          configMap:
+            name: {{ include "app.fullname" $ }}-files
+            defaultMode: 0755
+        - name: secret-files
+          secret:
+            secretName: {{ include "app.fullname" $ }}-files
+            defaultMode: 0755
+        - name: binary-files
+          configMap:
+            name: {{ include "app.fullname" $ }}-binary-files
+            defaultMode: 0755
         {{- range $job.additionalVolumes }}
         - name: {{ .name }}
           {{- toYaml .volume | nindent 10 }}
