--- a/charts/yugabyte/templates/setup-credentials-configmap.yaml
+++ b/charts/yugabyte/templates/setup-credentials-configmap.yaml
@@ -225,17 +225,17 @@ data:
 
     ## Create YSQL DB
     if [[ -n $ysql_db ]] && [[ "$ysql_db" != "$DEFAULT_YSQL_DB" ]]; then
-      create_container
+      create_container || true
     fi
 
     ## Update YSQL Password
     if [[ -n $ysql_password ]] && [[ "$ysql_password" != "$DEFAULT_YSQL_PASSWORD" ]] && [[ "$ysql_user" == "$DEFAULT_YSQL_USER" ]]; then
-      update_password
+      update_password || true
     fi
 
     ## Create YSQL User
     if [[ -n $ysql_user ]] && [[ "$ysql_user" != "$DEFAULT_YSQL_USER" ]]; then
-      create_user
+      create_user || true
     fi
 
     # YCQL Credentials
