--- a/charts/secret/templates/secret.yaml
+++ b/charts/secret/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "app.fullname" . }}
+  name: {{ .Release.Name }}
 type: Opaque
 data:
   {{- range $k, $v := .Values.secrets }}
