--- a/charts/yugabyte/Chart.yaml
+++ b/charts/yugabyte/Chart.yaml
@@ -1,15 +1,18 @@
-apiVersion: v1
-appVersion: 2.13.0.0-b42
+annotations:
+  charts.openshift.io/name: yugabyte
+apiVersion: v2
+appVersion: 2.17.2.0-b216
 description: YugabyteDB is the high-performance distributed SQL database for building
   global, internet-scale apps.
 home: https://www.yugabyte.com
 icon: https://avatars0.githubusercontent.com/u/17074854?s=200&v=4
+kubeVersion: '>=1.17.0-0'
 maintainers:
-- email: ram@yugabyte.com
-  name: Ram Sri
-- email: arnav@yugabyte.com
-  name: Arnav Agarwal
+- email: sanketh@yugabyte.com
+  name: Sanketh Indarapu
+- email: gjalla@yugabyte.com
+  name: Govardhan Reddy Jalla
 name: yugabyte
 sources:
 - https://github.com/yugabyte/yugabyte-db
-version: 2.13.3
+version: 2.17.2
