--- a/charts/yugabyte/templates/service.yaml
+++ b/charts/yugabyte/templates/service.yaml
@@ -24,7 +24,7 @@ data:
 {{- end }}
 ---
 {{- end }}
----
+
 {{- range .Values.Services }}
 {{- $service := . -}}
 {{- $appLabelArgs := dict "label" .label "root" $root -}}
@@ -337,20 +337,18 @@ spec:
         - name: YBDEVOPS_CORECOPY_DIR
           value: "/mnt/disk0/cores"
         {{- if eq .name "yb-masters" }}
-        {{- with $root.Values.master.extraEnv }}{{ toYaml . | nindent 8 }}{{- end }}
-        {{- $data := dict "secretenv" $root.Values.master.secretEnv "root" $root "suffix" "master"}}
-        {{- include "yugabyte.addenvsecrets" $data | nindent 8 }}
+        {{- with $root.Values.master.extraEnv }}{{ toYaml . | nindent 8 }}{{ end }}
+        {{- with $root.Values.master.secretEnv }}{{ toYaml . | nindent 8 }}{{ end }}
         {{- else }}
-        {{- with $root.Values.tserver.extraEnv }}{{ toYaml . | nindent 8 }}{{- end }}
-        {{- $data := dict "secretenv" $root.Values.tserver.secretEnv "root" $root "suffix" "tserver" }}
-        {{- include "yugabyte.addenvsecrets" $data | nindent 8 }}
+        {{- with $root.Values.tserver.extraEnv }}{{ toYaml . | nindent 8 }}{{ end }}
+        {{- with $root.Values.tserver.secretEnv }}{{ toYaml . | nindent 8 }}{{ end }}
         {{- end }}
         {{- if and $root.Values.tls.enabled $root.Values.tls.clientToServer (ne .name "yb-masters") }}
         - name: SSL_CERTFILE
           value: /root/.yugabytedb/root.crt
         {{- end }}
         resources:
-        {{- if eq .name "yb-masters" }}
+        {{ if eq .name "yb-masters" }}
 {{ toYaml $root.Values.resource.master | indent 10 }}
         {{ else }}
 {{ toYaml $root.Values.resource.tserver | indent 10 }}
@@ -524,8 +522,6 @@ spec:
             name: {{ $label | quote }}
           {{- end}}
         volumeMounts:
-          - name: debug-hooks-volume
-            mountPath: /opt/debug_hooks_config
           {{ if not $root.Values.storage.ephemeral }}
           {{- range $index := until (int ($storageInfo.count)) }}
           - name: {{ $root.Values.oldNamingStyle | ternary (printf "datadir%d" $index) (printf "%s%d" (include "yugabyte.volume_name" $root) $index) }}
@@ -576,17 +572,6 @@ spec:
       {{- end }}
 
       volumes:
-        {{- if (eq .name "yb-masters") }}
-        - name: debug-hooks-volume
-          configMap: 
-            name: {{ include "yugabyte.fullname" $root }}-master-hooks
-            defaultMode: 0755
-        {{- else if (eq .name "yb-tservers") }}
-        - name: debug-hooks-volume
-          configMap: 
-            name: {{ include "yugabyte.fullname" $root }}-tserver-hooks
-            defaultMode: 0755
-        {{- end }}
         {{ if not $root.Values.storage.ephemeral }}
         {{- range $index := until (int ($storageInfo.count)) }}
         - name: {{ $root.Values.oldNamingStyle | ternary (printf "datadir%d" $index) (printf "%s%d" (include "yugabyte.volume_name" $root) $index) }}
