--- a/charts/yugabyte/values.yaml
+++ b/charts/yugabyte/values.yaml
@@ -8,7 +8,7 @@ nameOverride: ""
 
 Image:
   repository: "yugabytedb/yugabyte"
-  tag: 2.17.2.0-b216
+  tag: 2.16.4.0-b32
   pullPolicy: IfNotPresent
   pullSecretName: ""
 
@@ -375,16 +375,13 @@ tserver:
   #       fieldPath: status.hostIP
   extraEnv: []
 
-  ## secretEnv variables are used to expose secrets data as env variables in the tserver pods.
-  ## If namespace field is not specified we assume that user already
-  ## created the secret in the same namespace as DB pods.
-  ## Example
+  # secretEnv variables are used to expose secrets data as env variables in the tserver pods.
+  # TODO Add namespace also to support copying secrets from other namespace.
   # secretEnv:
   # - name: MYSQL_LDAP_PASSWORD
   #   valueFrom:
   #     secretKeyRef:
   #       name: secretName
-  #       namespace: my-other-namespace-with-ldap-secret
   #       key: password
   secretEnv: []
 
