--- a/charts/helmchart/templates/job.yml
+++ b/charts/helmchart/templates/job.yml
@@ -26,6 +26,9 @@ spec:
         sidecar.opentelemetry.io/inject: {{ include "app.fullname" $ }}
       {{- end }}
       labels:
+      {{- with $job.podLabels }}
+        {{- toYaml . | nindent 12 }}
+      {{- end }}
         {{- include "app.selectorLabels" $ | nindent 8 }}
     spec:
       imagePullPolicy: {{ $job.image.pullPolicy }}
