--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -160,8 +160,8 @@ spec:
         - {{ include "app.container" (merge (dict "container" . "pod" .) (omit $ "container" "pod")) | indent 10 | trim }}
       {{- end }}
 
-      {{- range $.Values.sideCars }}
-        - {{ . }}
+      {{- with $.Values.sideCars }}
+        {{ toYaml . | nindent 8 }}
       {{- end }}
       {{- end }}
 
