support existing image pull secrets

--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -39,6 +39,9 @@ spec:
         {{- include "app.selectorLabels" . | nindent 8 }}
     spec:
       imagePullSecrets:
+      {{- range $sec := $.Values.existingImagePullSecrets }}
+        - name: {{ $sec }}
+      {{- end }}
       {{- range $name, $item := $.Values.imagePullSecrets }}
         - name: {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
       {{- end }}
