--- a/charts/helmchart/templates/cronjob.yml
+++ b/charts/helmchart/templates/cronjob.yml
@@ -38,6 +38,9 @@ spec:
         spec:
           imagePullPolicy: {{ $job.image.pullPolicy }}
           imagePullSecrets:
+          {{- range $sec := $.Values.existingImagePullSecrets }}
+            - name: {{ $sec }}
+          {{- end }}
           {{- range $name, $item := $.Values.imagePullSecrets }}
             - name: {{ include "app.fullname" $ }}-{{ $name }}-pull-secret
           {{- end }}
