--- a/charts/helmchart/templates/secret.yaml
+++ b/charts/helmchart/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "app.fullname" . }}
+  name: {{ include "app.fullname" . }}-job
 type: Opaque
 data:
   {{- range $k, $v := .Values.secrets }}
@@ -13,7 +13,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "app.fullname" $ }}-files
+  name: {{ include "app.fullname" $ }}-job-files
 type: Opaque
 data:
   {{- range $k, $v := .Values.secretFiles }}
