--- a/charts/godaddy-webhook/templates/pki.yaml
+++ b/charts/godaddy-webhook/templates/pki.yaml
@@ -23,7 +23,7 @@ metadata:
 {{ include "godaddy-webhook.labels" . | indent 4 }}
 spec:
   secretName: {{ include "godaddy-webhook.rootCACertificate" . }}
-  duration: 43800h # 5y
+  duration: 43800h0m0s # 5y
   issuerRef:
     name: {{ include "godaddy-webhook.selfSignedIssuer" . }}
   commonName: "ca.godaddy-webhook.cert-manager"
@@ -55,7 +55,7 @@ metadata:
 {{ include "godaddy-webhook.labels" . | indent 4 }}
 spec:
   secretName: {{ include "godaddy-webhook.servingCertificate" . }}
-  duration: 8760h # 1y
+  duration: 8760h0m0s # 1y
   issuerRef:
     name: {{ include "godaddy-webhook.rootCAIssuer" . }}
   dnsNames:
