--- a/charts/helmchart/templates/secret.yaml
+++ b/charts/helmchart/templates/secret.yaml
@@ -32,3 +32,13 @@ type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ $item }}
 {{- end }}
+{{- if $.Values.generate.keys.ecdsa  }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "app.fullname" $ }}-ecdsa
+type: kubernetes.io/dockerconfigjson
+data:
+  private: {{ genPrivateKey "ecdsa" | b64enc }}
+{{- end }}
