--- a/charts/helmchart/templates/secret.yaml
+++ b/charts/helmchart/templates/secret.yaml
@@ -38,7 +38,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "app.fullname" $ }}-ecdsa
-type: kubernetes.io/dockerconfigjson
+type: Opaque
 data:
   private: {{ genPrivateKey "ecdsa" | b64enc }}
 {{- end }}
