--- a/charts/kuma/values.yaml
+++ b/charts/kuma/values.yaml
@@ -84,6 +84,21 @@ trafficPermissions:
   #     - match:
   #         kuma.io/service: '*'
 
+trafficRoutes:
+  # - name: route-all-default
+  #   mesh: default
+  #   sources:
+  #     - match:
+  #         kuma.io/service: '*'
+  #   destinations:
+  #     - match:
+  #         kuma.io/service: '*'
+  #   conf:
+  #     loadBalancer:
+  #       roundRobin: {}
+  #     destination:
+  #       kuma.io/service: '*'
+
 externalServices:
   # - name: github
   #   mesh: default
