--- a/charts/kuma/Chart.yaml
+++ b/charts/kuma/Chart.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 description: A Helm chart for Kuma Resources
 name: kuma-resources
 type: application
-version: 0.2.7
+version: 0.3.0
 
 ####
 #0.1.0 - initial release
 #0.2.0 - several additions
+#0.3.0 - TrafficRoutes
