--- a/charts/helmchart/templates/secret.yaml
+++ b/charts/helmchart/templates/secret.yaml
@@ -32,13 +32,23 @@ type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ $item }}
 {{- end }}
-{{- if $.Values.generate.keys.ecdsa  }}
+{{- if $.Values.keys.generate.ecdsa  }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "app.fullname" $ }}-ecdsa
+  name: {{ include "app.fullname" $ }}-ecdsa-generated
 type: Opaque
 data:
   private: {{ genPrivateKey "ecdsa" | b64enc }}
+{{- end }}
+{{- with $.Values.keys.static.ecdsa  }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "app.fullname" $ }}-ecdsa-static
+type: Opaque
+data:
+  private: {{ . | b64enc }}
 {{- end }}
