--- a/charts/helmchart/Chart.yaml
+++ b/charts/helmchart/Chart.yaml
@@ -3,8 +3,9 @@ apiVersion: v2
 description: The only helm chart you will ever need
 name: helmchart
 type: application
-version: 1.0.53
+version: 1.0.55
 
 
 #1.0 - Initial push
 #1.0.27 - job only flag
+#1.0.55 - shareProcessNamespace toggle
