--- a/charts/helmchart/templates/deployment.yaml
+++ b/charts/helmchart/templates/deployment.yaml
@@ -38,6 +38,7 @@ spec:
         
         {{- include "app.selectorLabels" . | nindent 8 }}
     spec:
+      shareProcessNamespace: {{ .Values.shareProcessNamespac }}
       imagePullSecrets:
       {{- range $sec := $.Values.existingImagePullSecrets }}
         - name: {{ $sec }}
